Bug 428750 - akonadi-search does not build due to deprecated symbol
Summary: akonadi-search does not build due to deprecated symbol
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-06 04:03 UTC by Ihor Antonov
Modified: 2020-11-06 06:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ihor Antonov 2020-11-06 04:03:29 UTC
SUMMARY

akonadi-search fails to build with kdesrc-build

STEPS TO REPRODUCE
1. kdesrc-build akonadi-search 

Git ref: 49c6228abca87403077b6ff0fcd883418c2f5ace

OBSERVED RESULT

akonadi-search/runner/pimcontactsrunner.cpp:39:5: error: ‘setIgnoredTypes’ was not declared in this scope
   39 |     setIgnoredTypes(Plasma::RunnerContext::FileSystem
      |     ^~~~~~~~~~~~~~~


EXPECTED RESULT

build succeeds

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon


setIgnoredTypes function is marked as deprecated in krunner and is hidden behind and IFDEF
Comment 1 Laurent Montel 2020-11-06 06:22:25 UTC
Git commit 3626beedba96ce462be199e3ceff48e31f7ad948 by Laurent Montel.
Committed on 06/11/2020 at 06:21.
Pushed by mlaurent into branch 'master'.

Fix Bug 428750 - akonadi-search does not build due to deprecated symbol

M  +0    -4    runner/pimcontactsrunner.cpp

https://invent.kde.org/pim/akonadi-search/commit/3626beedba96ce462be199e3ceff48e31f7ad948