Fix Bug 428750 - akonadi-search does not build due to deprecated symbol

BUG: 428750